fixDK_DN_MenuBottom

--- a/StepTrackerAndroidApp/app/src/main/AndroidManifest.xml
+++ b/StepTrackerAndroidApp/app/src/main/AndroidManifest.xml
@@ -12,13 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StepTrackerAndroidApp">
         <activity
-            android:name=".TrangBaoCao"
-            android:exported="false" />
-        <activity
-            android:name=".TrangNguoiDung"
-            android:exported="false" />
-        <activity
-            android:name=".TrangChu"
+            android:name=".Main_MenuBottom_Fragment"
             android:exported="false" />
         <activity
             android:name=".TaoTaiKhoan"
