updateBMI_NguoiDung_BaoCao

--- a/StepTrackerAndroidApp/app/src/main/AndroidManifest.xml
+++ b/StepTrackerAndroidApp/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StepTrackerAndroidApp">
         <activity
+            android:name=".ChinhSuaNguoiDung"
+            android:exported="false" />
+        <activity
             android:name=".Main_MenuBottom_Fragment"
             android:exported="false" />
         <activity
