--- a/StepTrackerAndroidApp/app/src/main/AndroidManifest.xml
+++ b/StepTrackerAndroidApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.ltdd.steptrackerandroidapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.sensor.stepcounter" />
+    <uses-feature android:name="android.hardware.sensor.stepdetector" />
 
     <application
         android:allowBackup="true"
